<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/editItem_layout_p2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Item_opentime"
            android:textSize="19sp" />

        <CheckBox
            android:id="@+id/is24hr_editItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/Item_24hropen" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView_store_start2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_startTime"
                    android:textColor="#3366FF"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Item_TimeTo"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/textView_store_end2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Item_endTime"
                    android:textColor="#3366FF"
                    android:textSize="19sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" >

                <Button
                    android:id="@+id/button_add_start_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editItemP2_editStartTime" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="" />

                <Button
                    android:id="@+id/button_add_close_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editItemP2_editEndTime" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/Item_restdays"
                android:textSize="19sp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <CheckBox
                    android:id="@+id/checkBox_w1_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_monday" />

                <CheckBox
                    android:id="@+id/checkBox_w2_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_tuesday" />

                <CheckBox
                    android:id="@+id/checkBox_w3_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_wednesday" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <CheckBox
                    android:id="@+id/checkBox_w4_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_thursday" />

                <CheckBox
                    android:id="@+id/checkBox_w5_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_friday" />

                <CheckBox
                    android:id="@+id/checkBox_w6_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_saturday" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <CheckBox
                    android:id="@+id/checkBox_w7_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_sunday" />

                <CheckBox
                    android:id="@+id/checkBox_holiday_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_nationHoliday" />

                <CheckBox
                    android:id="@+id/checkBox_noRest_editItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Item_noRestDays" />

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Item_memo"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText_sMemo2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10" />
    </LinearLayout>

</ScrollView>