<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/report_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/reportRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_rad_nameInvalid" />
        
        <RadioButton
            android:id="@+id/reportRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_rad_hadDoubled" />

        <RadioButton
            android:id="@+id/reportRadio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_rad_hadMoved" />

        <RadioButton
            android:id="@+id/reportRadio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_rad_hadBroken" />
        
        <RadioButton
            android:id="@+id/reportRadio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_rad_notExsist" />
    </RadioGroup>

    <TextView
        android:id="@+id/report_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/report_rad_advices"
        android:visibility="gone" />

    <EditText
        android:id="@+id/report_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:visibility="gone" />
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/report_note"/>

    <EditText
        android:id="@+id/report_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:ems="10"/>

</LinearLayout>