<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/additemp3_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ItemP1_lowsetPrice"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText_price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ItemP1_custom"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ItemP1_telephone"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ItemP1_custom"
            android:inputType="phone"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ItemP3_storeEmail"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/ItemP1_custom"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ItemP3_storeWeb"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editText_store_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:hint="@string/ItemP1_custom"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ItemP3_otherOption"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox_CanDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ItemP3_canDelivery" />

        <CheckBox
            android:id="@+id/checkBox_CanToGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ItemP3_canToGo" />
    </LinearLayout>

</ScrollView>